# simetbox-openwrt-config

./: README.md  config.h  configure.ac  libtool
src/: Makefile.am  simet_config.c  simet_config.h
